Fix jumping issue

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ h1, h2, h3 {
 body {
   background-color: #fff;
   font-size: 100%;
+  -webkit-overflow-scrolling: touch;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   font-family:
@@ -146,6 +147,7 @@ css-doodle[use*="flags"] {
   display: block;
   width: 100%;
   height: 20vh;
+  position: absolute;
   max-height: 10em;
   overflow: hidden;
   min-width: 900px;
@@ -232,6 +234,7 @@ textarea[code] {
 }
   .cover header {
     text-align: center;
+    margin-top: 12em;
   }
   .cover h1 {
     margin-top: 2em;
@@ -617,6 +620,8 @@ textarea[code] {
 
     .usage .example {
       margin-bottom: 6em;
+      display: grid;
+      place-items: center;
     }
     .docs h5 {
       color: #000;
@@ -730,14 +735,13 @@ textarea[code] {
   position: relative;
 }
   .example .code-sample {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     z-index: 3;
     max-width: 90%;
-    transform: translate3d(-50%, -50%, 0);
     line-height: 1.4;
     overflow: hidden;
+    transition: .2s ease;
+    will-change: transform;
+    position: absolute;
   }
     .example__link {
       position: absolute;
